--- a/src/main/java/com/bloxbean/algodea/idea/contracts/ui/AppTxnDetailsEntryForm.form
+++ b/src/main/java/com/bloxbean/algodea/idea/contracts/ui/AppTxnDetailsEntryForm.form
@@ -6,17 +6,17 @@
       <xy x="20" y="20" width="900" height="750"/>
     </constraints>
     <properties>
-      <minimumSize width="900" height="700"/>
+      <minimumSize width="700" height="600"/>
     </properties>
     <border type="none"/>
     <children>
       <grid id="cda12" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none"/>
+        <border type="none" title="Application Options"/>
         <children>
           <component id="dc5db" class="javax.swing.JLabel">
             <constraints>
