--- a/src/main/java/com/bloxbean/algodea/idea/contracts/ui/AppTxnMainPanel.form
+++ b/src/main/java/com/bloxbean/algodea/idea/contracts/ui/AppTxnMainPanel.form
@@ -7,7 +7,8 @@
       <xy x="20" y="20" width="1000" height="900"/>
     </constraints>
     <properties>
-      <minimumSize width="950" height="800"/>
+      <minimumSize width="860" height="780"/>
+      <preferredSize width="704" height="780"/>
     </properties>
     <border type="none"/>
     <children>
@@ -21,7 +22,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="3d016" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="3d016" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="App Txn Details"/>
@@ -29,39 +30,48 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="fb4ae" layout-manager="FormLayout">
-                <rowspec value="center:d:noGrow"/>
+              <grid id="dccb0" layout-manager="FormLayout">
+                <rowspec value="center:d:grow"/>
                 <rowspec value="top:3dlu:noGrow"/>
                 <rowspec value="center:max(d;4px):noGrow"/>
                 <colspec value="fill:d:grow"/>
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="2" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <minimum-size width="900" height="800"/>
-                  </grid>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
                   <nested-form id="8207e" form-file="com/bloxbean/algodea/idea/contracts/ui/AppTxnBaseParamEntryForm.form" binding="appTxnBaseEntryForm" custom-create="true">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                      <forms/>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+                      <forms top="5" left="0" bottom="0" right="0" defaultalign-vert="false"/>
                     </constraints>
                   </nested-form>
+                </children>
+              </grid>
+              <grid id="39bbc" layout-manager="FormLayout">
+                <rowspec value="center:d:noGrow"/>
+                <colspec value="fill:d:grow"/>
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
                   <nested-form id="c86c3" form-file="com/bloxbean/algodea/idea/contracts/ui/AppTxnDetailsEntryForm.form" binding="appTxnDetailsEntryForm" custom-create="true">
                     <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                      <forms/>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+                      <forms defaultalign-vert="false"/>
                     </constraints>
                   </nested-form>
                 </children>
               </grid>
             </children>
           </grid>
-          <grid id="37ab8" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <grid id="37ab8" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="5" left="0" bottom="0" right="0"/>
             <constraints>
-              <tabbedpane title="Txn Details"/>
+              <tabbedpane title="Txn Options"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -71,11 +81,6 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
               </nested-form>
-              <vspacer id="a0e58">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
             </children>
           </grid>
         </children>
