--- a/src/main/java/com/bloxbean/algodea/idea/contracts/ui/CreateMainPanel.form
+++ b/src/main/java/com/bloxbean/algodea/idea/contracts/ui/CreateMainPanel.form
@@ -5,7 +5,10 @@
     <constraints>
       <xy x="20" y="20" width="928" height="993"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="850" height="650"/>
+      <preferredSize width="850" height="650"/>
+    </properties>
     <border type="none"/>
     <children>
       <tabbedpane id="73cbd" binding="tabbedPane1" default-binding="true">
@@ -58,14 +61,14 @@
           <grid id="23d5c" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <tabbedpane title="Txn Details"/>
+              <tabbedpane title="Txn Options"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
               <nested-form id="d336a" form-file="com/bloxbean/algodea/idea/transaction/ui/TransactionDtlsEntryForm.form" binding="txnDtlEntryForm" custom-create="true">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
               </nested-form>
             </children>
