--- a/src/main/java/com/bloxbean/algodea/idea/contracts/ui/UpdateAppMainPanel.form
+++ b/src/main/java/com/bloxbean/algodea/idea/contracts/ui/UpdateAppMainPanel.form
@@ -5,7 +5,10 @@
     <constraints>
       <xy x="20" y="20" width="1569" height="1750"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="850" height="650"/>
+      <preferredSize width="850" height="650"/>
+    </properties>
     <border type="none"/>
     <children>
       <tabbedpane id="3c15a" binding="tabbedPane1" default-binding="true">
@@ -28,13 +31,8 @@
             </properties>
             <border type="none"/>
             <children>
-              <grid id="1f87c" layout-manager="FormLayout">
-                <rowspec value="center:d:grow"/>
-                <rowspec value="top:3dlu:noGrow"/>
-                <rowspec value="center:d:grow"/>
-                <rowspec value="top:3dlu:noGrow"/>
-                <rowspec value="center:max(d;4px):noGrow"/>
-                <colspec value="fill:d:grow"/>
+              <grid id="1f87c" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -44,22 +42,27 @@
                   <nested-form id="13855" form-file="com/bloxbean/algodea/idea/contracts/ui/AppTxnBaseParamEntryForm.form" binding="appTxnBaseForm" custom-create="true">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
-                      <forms/>
                     </constraints>
                   </nested-form>
-                  <nested-form id="36553" form-file="com/bloxbean/algodea/idea/contracts/ui/UpdateAppEntryForm.form" binding="updateAppEntryForm" custom-create="true">
+                  <grid id="1e778" layout-manager="FormLayout">
+                    <rowspec value="center:d:grow"/>
+                    <rowspec value="top:3dlu:noGrow"/>
+                    <rowspec value="center:max(d;4px):noGrow"/>
+                    <colspec value="fill:d:grow"/>
                     <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
-                      <forms/>
-                    </constraints>
-                  </nested-form>
-                  <component id="ab4ad" class="javax.swing.JSeparator">
-                    <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                      <forms defaultalign-horz="false" defaultalign-vert="false"/>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties/>
-                  </component>
+                    <border type="none" title="Stateful Contract Details"/>
+                    <children>
+                      <nested-form id="36553" form-file="com/bloxbean/algodea/idea/contracts/ui/UpdateAppEntryForm.form" binding="updateAppEntryForm" custom-create="true">
+                        <constraints>
+                          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+                          <forms defaultalign-vert="false"/>
+                        </constraints>
+                      </nested-form>
+                    </children>
+                  </grid>
                 </children>
               </grid>
             </children>
@@ -90,14 +93,17 @@
           <grid id="2691f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <tabbedpane title="Txn Details"/>
+              <tabbedpane title="Txn Options"/>
             </constraints>
-            <properties/>
+            <properties>
+              <minimumSize width="554" height="450"/>
+              <preferredSize width="554" height="450"/>
+            </properties>
             <border type="none"/>
             <children>
               <nested-form id="5300e" form-file="com/bloxbean/algodea/idea/transaction/ui/TransactionDtlsEntryForm.form" binding="txnDetailsEntryForm" custom-create="true">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
               </nested-form>
             </children>
