--- a/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigOptInAssetDialog.form
+++ b/src/main/java/com/bloxbean/algodea/idea/stateless/ui/LogicSigOptInAssetDialog.form
@@ -3,10 +3,10 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="850" height="500"/>
+      <xy x="20" y="20" width="850" height="650"/>
     </constraints>
     <properties>
-      <minimumSize width="850" height="350"/>
+      <minimumSize width="850" height="650"/>
     </properties>
     <border type="none"/>
     <children>
@@ -233,10 +233,10 @@
               </grid>
             </children>
           </grid>
-          <grid id="d0ba1" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="d0ba1" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <tabbedpane title="Txn Details"/>
+              <tabbedpane title="Txn Options"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -246,11 +246,6 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
               </nested-form>
-              <vspacer id="d4d96">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
             </children>
           </grid>
         </children>
